Jackson Object IDs in lists and maps (#316) (propagating property info recursively through TypeProcessors) - added `context` field to `PropertyModel` - added `typeContext` field to `TypeProcessor.Context` - added `Jackson2TypeContext`